tests/ui/de-union.stderr
error: Unions aren't supported by the DeserializeFromValue derive macro
 --> tests/ui/de-union.rs:5:1
  |
5 | union Union {
  | ^^^^^
